--- a/app/src/main/res/layout/fragment_posts_list.xml
+++ b/app/src/main/res/layout/fragment_posts_list.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_margin="@dimen/margin_16"
+        android:layout_margin="@dimen/size_20"
         android:src="@drawable/ic_baseline_add_24"
         android:tint="@color/black" />
 </RelativeLayout>
